Fixed header image overlap problem.

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 *{
     padding:0;
     margin:0;
+    font-family: 'Roboto', sans-serif;
 }
 
+
+
+.education-entry, .work-entry, .project-entry {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+
 h1 {
-  font-family: 'Roboto', sans-serif;
+  
   font-size: 40px;
   color: #F5A623;
   line-height: 48px;
@@ -12,15 +21,14 @@ h1 {
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
   font-style: bold;
   font-size: 24px;
   color: #999999;
   line-height: 29px;
+  padding: 10px;
 }
 
 h3 {
-  font-family: 'Roboto Light', sans-serif;
   font-style: italic;
   font-size: 20px;
   color: #000000;
@@ -28,15 +36,20 @@ h3 {
 }
 
 h4 {
-  font-family: 'Roboto', sans-serif;
   font-style: bold;
   font-size: 14px;
   color: #4A4A4A;
   line-height: 17px;
 }
 
+h2, h3, h4, h5 {
+  padding:10px;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+
 .date-text {
-  font-family: 'Roboto', sans-serif;
   font-style: italic;
   font-size: 14px;
   color: #999999;
@@ -44,7 +57,6 @@ h4 {
 }
 
 p {
-  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #333333;
   line-height: 21px;
@@ -56,7 +68,6 @@ a {
 }
 
 .welcome-message {
-  font-family: 'Roboto', sans-serif;
   font-style: italic;
   font-size: 18px;
   color: #F3F3F3;
@@ -92,6 +103,7 @@ a {
 }
 
 .flex-box {
+  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -101,7 +113,6 @@ a {
 
 .center-content {
   padding: 5%;
-  height: 240px;
 }
 
 ul {
